Fixed arrows
Changed the arrows table into its own table so they don't create too much spacing.

--- a/default.css
+++ b/default.css
@@ -26,6 +26,21 @@ h1 {
 	cursor: url("red.cur") 16 16, auto;
 }
 
+.arrows {
+	vertical-align: top;
+	display: inline-block;
+	background-color: rgb(187, 187, 221);
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: -10px;
+	padding-bottom: 10px;
+}
+
+.arrows td {
+	height: 36px;
+	width: 36px;
+}
+
 .guesses {
 	vertical-align: top;
 	display: inline-block;
